feat: implementa paginação na rota de listagem de álbuns
